// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`My Pokemon List Renders list of pokemon 1`] = `
<div>
  <nav
    class="nav"
  >
    <a
      href="/"
    >
      <svg
        class="navLogo"
      >
        logo.svg
      </svg>
    </a>
    <a
      class="navLink"
      href="/"
    >
      Home
    </a>
  </nav>
  <main
    class="main"
  >
    <div>
      <h1
        class="header"
      >
        My Pokemon
      </h1>
      <ul
        class="myPokemonList"
      >
        <li
          class="myPokemonListItem"
        >
          <a
            class="myPokemonListItemLink"
            href="/bulbasaur"
          >
            <h2
              class="myPokemonListItemNickname"
            >
              Test Pokemon
            </h2>
            <h3
              class="myPokemonListItemName"
            >
              bulbasaur
            </h3>
          </a>
          <img
            alt="bulbasaur"
            src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png"
          />
          <button
            class="pixelatedButton myPokemonListItemRelease"
          >
            <span
              class="pixelatedButtonText"
            >
              Release
            </span>
          </button>
        </li>
      </ul>
      <div
        class="popup"
        role="alert"
      />
    </div>
  </main>
</div>
`;

exports[`My Pokemon List Renders list of pokemon 2`] = `
<div>
  <nav
    class="nav"
  >
    <a
      href="/"
    >
      <svg
        class="navLogo"
      >
        logo.svg
      </svg>
    </a>
    <a
      class="navLink"
      href="/"
    >
      Home
    </a>
  </nav>
  <main
    class="main"
  >
    <div>
      <h1
        class="header"
      >
        My Pokemon
      </h1>
      <h2
        class="emptyMessage"
      >
        <span>
          You have no saved pokemon yet.
        </span>
        <br />
        <span>
          Go Catch Some!
        </span>
      </h2>
      <div
        class="popup isVisible"
        role="alert"
      >
        <p
          title="Test Pokemon has been released!"
        >
          <span
            class="letter"
            style="animation-delay: 0s;"
          >
            T
          </span>
          <span
            class="letter"
            style="animation-delay: 0.06s;"
          >
            e
          </span>
          <span
            class="letter"
            style="animation-delay: 0.12s;"
          >
            s
          </span>
          <span
            class="letter"
            style="animation-delay: 0.18s;"
          >
            t
          </span>
          <span
            class="letter"
            style="animation-delay: 0.24s;"
          >
             
          </span>
          <span
            class="letter"
            style="animation-delay: 0.3s;"
          >
            P
          </span>
          <span
            class="letter"
            style="animation-delay: 0.36s;"
          >
            o
          </span>
          <span
            class="letter"
            style="animation-delay: 0.42s;"
          >
            k
          </span>
          <span
            class="letter"
            style="animation-delay: 0.48s;"
          >
            e
          </span>
          <span
            class="letter"
            style="animation-delay: 0.54s;"
          >
            m
          </span>
          <span
            class="letter"
            style="animation-delay: 0.6s;"
          >
            o
          </span>
          <span
            class="letter"
            style="animation-delay: 0.6599999999999999s;"
          >
            n
          </span>
          <span
            class="letter"
            style="animation-delay: 0.72s;"
          >
             
          </span>
          <span
            class="letter"
            style="animation-delay: 0.78s;"
          >
            h
          </span>
          <span
            class="letter"
            style="animation-delay: 0.84s;"
          >
            a
          </span>
          <span
            class="letter"
            style="animation-delay: 0.8999999999999999s;"
          >
            s
          </span>
          <span
            class="letter"
            style="animation-delay: 0.96s;"
          >
             
          </span>
          <span
            class="letter"
            style="animation-delay: 1.02s;"
          >
            b
          </span>
          <span
            class="letter"
            style="animation-delay: 1.08s;"
          >
            e
          </span>
          <span
            class="letter"
            style="animation-delay: 1.14s;"
          >
            e
          </span>
          <span
            class="letter"
            style="animation-delay: 1.2s;"
          >
            n
          </span>
          <span
            class="letter"
            style="animation-delay: 1.26s;"
          >
             
          </span>
          <span
            class="letter"
            style="animation-delay: 1.3199999999999998s;"
          >
            r
          </span>
          <span
            class="letter"
            style="animation-delay: 1.38s;"
          >
            e
          </span>
          <span
            class="letter"
            style="animation-delay: 1.44s;"
          >
            l
          </span>
          <span
            class="letter"
            style="animation-delay: 1.5s;"
          >
            e
          </span>
          <span
            class="letter"
            style="animation-delay: 1.56s;"
          >
            a
          </span>
          <span
            class="letter"
            style="animation-delay: 1.6199999999999999s;"
          >
            s
          </span>
          <span
            class="letter"
            style="animation-delay: 1.68s;"
          >
            e
          </span>
          <span
            class="letter"
            style="animation-delay: 1.74s;"
          >
            d
          </span>
          <span
            class="letter"
            style="animation-delay: 1.7999999999999998s;"
          >
            !
          </span>
        </p>
        <button
          class="button popupButton"
        >
          Close
        </button>
      </div>
    </div>
  </main>
</div>
`;
